[project]
name = "context-server"
version = "0.1.0"
description = "Python library for building Zed context servers"
authors = [
    { name = "David Soria Parra", email = "experimentalworks@gmail.com" },
]
dependencies = ["anyio>=4.4.0", "click>=8.1.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/context_server"]
